--- a/acc/acc.tex
+++ b/acc/acc.tex
@@ -1095,14 +1095,14 @@ and then conclude with a quantitative demonstration.
 \begin{figure*}
 \begin{tikzpicture}
 \small
-\node at (8.5,0) {
+\node at (8.35,0) {
     %\rotatebox{90}{$f_i(t)$}
-    \rotatebox{90}{no regularization on $K^{LG}$}
+    \rotatebox{90}{standard method}
     };
 
-\node at (8.5,4.2) {
+\node at (8.35,4.2) {
     %\rotatebox{90}{$f_i(t)$}
-    \rotatebox{90}{rank 1 $K^{LG}$}
+    \rotatebox{90}{proposed rank-1 method}
     };
 
 \node at (-9,0) {
